--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
     "next": "12.1.0",
